changed a class title, added new game button, fixed some nav

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "voravich-react-portfolio",
+  "name": "mern-dungeon",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://voravichs.github.io/voravich-react-portfolio",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
