--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.16",
     "pretty": "^2.0.0",
     "react": "17.0.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
