--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.12",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "jwt-decode": "^2.2.0",
     "dotenv": "^16.0.2",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
