fix apollo client

--- a/package.json
+++ b/package.json
@@ -2,26 +2,7 @@
   "name": "mern-dungeon",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.12",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.1",
-    "jwt-decode": "^2.2.0",
-    "dotenv": "^16.0.2",
-    "gh-pages": "^4.0.0",
-    "postcss": "^8.4.16",
-    "pretty": "^2.0.0",
-    "react": "17.0.2",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "main": "server/server.js",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
