--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.12",
-    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "dotenv": "^16.0.2",
     "gh-pages": "^4.0.0",
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "graphql": "^15.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
