--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "main": "server/server.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "node server/server.js --ignore client",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "tailwind": "npx tailwindcss -i ./src/index.css -o ./src/tailwind.css --watch"
   },
   "keywords": [],
   "author": "",
